--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,12 @@ bower.json
 # Ignore node_modules
 node_modules/
 
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+/public/uploads
+
+# Ignore application configuration
+/config/application.yml
+/config/database.yml
