--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,7 +14,7 @@ app:
       size: 400
   mailers:
     application:
-      email: "vantri27051998@gmail.com"
+      email: "bichht95@gmail.com"
   products:
     value: 1
     min: 1
@@ -42,7 +42,7 @@ pages:
   per_page_ten: 10
 products:
   cur_slide_items: 3
-  trend: 10
+  trend: 6
   news: 5
 statis:
   one: 1
