add cart detail

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,6 +15,9 @@ app:
   mailers:
     application:
       email: "vantri27051998@gmail.com"
+  products:
+    value: 1
+    min: 1
   admin:
     users:
       per_page: 10
@@ -37,3 +40,5 @@ products:
   cur_slide_items: 3
   trend: 10
   news: 5
+statis:
+  one: 1
