--- a/config/settings.yml
+++ b/config/settings.yml
@@ -28,6 +28,7 @@ app:
       per_page: 2
       accept: "accept"
       refuse: "refuse"
+      finish: "finish"
       per_page: 5
     product:
       per_page: 10
