--- a/config/settings.yml
+++ b/config/settings.yml
@@ -18,10 +18,14 @@ app:
   admin:
     users:
       per_page: 10
+      member: "member"
+      block: "block"
+      unblock: "unblock"
     orders:
       per_page: 2
       accept: "accept"
       refuse: "refuse"
+      per_page: 5
 config:
   development:
     port: "587"
